--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>OSE Corporation</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="row">
+      <img 
+        src="/images/transparentlogo.png"
+        class="shrink">
+        <div>
+          <h1 class="no-margins">OSE Corporation</h1>
+          <p>Welcome to the OSE Corporation! Our modo here is Observe, Study, and Enhance!</p>
+        </div>
+    </div>
+    <div class="col grey-background side-bar">
+      <a href="/ose-database">ose-database</a>
+      <a href="/personal">employees</a>
+    </div>
   </body>
 </html>
