--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title>OSE Corporation</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/images/OSELogo.png"/>
   </head>
   <body>
     <div class="row">
