Switch personal term to employee

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     </div>
     <div class="col grey-background side-bar">
       <a href="/ose-database">ose-database</a>
-      <a href="/personal">employees</a>
+      <a href="/employee-database">employees</a>
     </div>
   </body>
 </html>
