--- a/views/ose_form.ejs
+++ b/views/ose_form.ejs
@@ -24,19 +24,19 @@
             required="true"
         />
         <% authors.forEach((author) => { %>
-            <option value="<%= author._id %>">Dr. <%= author.first_name + author.family_name %></option>
+            <option value="<%= author._id %>">Dr. <%= author.first_name + " " + author.family_name %></option>
         <% }); %>
         <label for="object_class">Object Class:</label>
-        <input
+        <select 
             id="object_class"
-            type="select"
-            placeholder="Select Object Class"
+            for="object_class"
             name="object_class_field"
             required="true"
-        />
-        <% [["ZAYIN", "TETH", "HE", "WAW", "ALEPH"]].forEach((object_class) => { %>
-            <option value="<%= object_class %>"><%= object_class %></option>
-        <% }); %>
+            >
+            <% ["ZAYIN", "TETH", "HE", "WAW", "ALEPH"].forEach((object_class) => { %>
+                <option value="<%= object_class %>"><%= object_class %></option>
+            <% }); %>
+        </select>
         <label for="special_containment_procedures">Special Containment Procedures:</label>
         <input
             id="special_containment_procedures"
