--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -522,8 +522,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.col-auto {
-  grid-column: auto;
+.mx-\[16vw\] {
+  margin-left: 16vw;
+  margin-right: 16vw;
 }
 
 .mx-\[25vw\] {
@@ -540,16 +541,48 @@ video {
   display: flex;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
+.max-h-\[364px\] {
+  max-height: 364px;
+}
+
+.max-h-\[400px\] {
+  max-height: 400px;
+}
+
+.min-h-\[16px\] {
+  min-height: 16px;
+}
+
 .min-h-\[64px\] {
   min-height: 64px;
 }
 
-.max-w-\[128px\] {
-  max-width: 128px;
+.min-w-\[156px\] {
+  min-width: 156px;
+}
+
+.max-w-\[156px\] {
+  max-width: 156px;
+}
+
+.flex-auto {
+  flex: 1 1 auto;
 }
 
 .shrink {
   flex-shrink: 1;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -560,6 +593,10 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -568,9 +605,35 @@ video {
   gap: 2rem;
 }
 
+.self-start {
+  align-self: flex-start;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-\[32px\] {
+  border-radius: 32px;
+}
+
+.rounded-\[16px\] {
+  border-radius: 16px;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-gray-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .bg-slate-700 {
@@ -578,19 +641,56 @@ video {
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
-.p-8 {
-  padding: 2rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .p-\[16px\] {
   padding: 16px;
 }
 
-.p-4 {
-  padding: 1rem;
+.text-center {
+  text-align: center;
+}
+
+.align-middle {
+  vertical-align: middle;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-yellow-100 {
+  --tw-text-opacity: 1;
+  color: rgb(254 249 195 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.triangle {
+  -webkit-clip-path: polygon(0 0, 100% 0, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 0 100%);
+}
+
+.hover\:min-h-\[74px\]:hover {
+  min-height: 74px;
+}
+
+.hover\:bg-red-950:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
+}
+
+.hover\:font-bold:hover {
+  font-weight: 700;
 }
