--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,37 +25,9 @@
         <a href="/ose-database">ose-database</a>
         <a href="/employee-database">employees</a>
       </div>
-      <div class="gap-4 flex flex-col">
-        <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-col justify-center">
-          <p>
-            <strong>Announcements:</strong> This website is a personal project for learning web development!
-          </p>
-        </div>
-        <div class="gap-4 flex flex-col h-[700px]">
-          <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-col justify-center">
-            <p>
-              <strong>About Us:</strong> We here at the OSE Corporation seek to push collective human knowledge past the
-              fragile limits of our minds! Our organization captures and observes useful and dangerous anomalies at our
-              hundreds of facilities and observation posts. These corporate owned locations study and run tests on these
-              anomalies to extract useful information on how to either exploit their anomalous properties or replicate
-              their attributes for the betterment of mankind and our employees.
-            </p>
-          </div>
-          <div class="flex gap-4 justify-center items-center">
-              <a 
-                href="/employee-database"
-                class="min-h-[64px] bg-slate-700 flex flex-col justify-center text-white flex-auto text-center rounded-lg 
-                  hover:bg-red-950 hover:font-bold hover:min-h-[74px]"
-              >CLICK TO ENTER: OSE DATABASE</a>
-              <a 
-                href="/employee-database"
-                class="min-h-[64px] bg-slate-700 flex flex-col justify-center text-white flex-auto text-center rounded-lg 
-                hover:bg-red-950 hover:font-bold hover:min-h-[74px]"
-              >CLICK TO ENTER: EMPLOYEE LISTINGS</a>
-          </div>
-        </div>
-      </div>
+      <%- include(inputPage) %>
     </div>
+  </div>
 </body>
 
 </html>
