Lay foundations for ose-database template

--- a/views/ose-database.ejs
+++ b/views/ose-database.ejs
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="stylesheet" href="../public/stylesheets/style.css" />
-    <title>OSE Database</title>
-</head>
-<body>
-    <div>
+    <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-col justify-center">
         <h1>The OSE Database</h1>
         <p>Number of OSE's documented: <%= ose_count %></p>
     </div>
     <ul>
         <% all_ose.forEach(function(ose) { %>
             <li>
-                <div class="row">
+                <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-col justify-center">
                     <p><%= "OSE-" + ose.anonomoly_id_number %></p>
                     <p><%= "Author: Dr. " + ose.author.first_name + " " + ose.author.family_name %></p>
                 </div>
             </li>
         <% }); %>
     </ul>
-</body>
-</html>
