--- a/views/ose-database.ejs
+++ b/views/ose-database.ejs
@@ -6,7 +6,7 @@
         <% all_ose.forEach(function(ose) { %>
             <li>
                 <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-col justify-center">
-                    <p><%= "OSE-" + ose.anonomoly_id_number %></p>
+                    <a href="<%= `/ose-database/${ose._id}` %>"><%= "OSE-" + ose.anonomoly_id_number %></a>
                     <p><%= "Author: Dr. " + ose.author.first_name + " " + ose.author.family_name %></p>
                 </div>
             </li>
