--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="min-h-[16px] bg-red-700 shadow-lg"></div>
-  <div class="mx-[16vw] my-[5vh] flex flex-row justify-center">
+  <div class="min-h-[75vh] mx-[16vw] my-[5vh] flex flex-row justify-center">
     <div class="flex gap-8">
       <div class="flex flex-col bg-gray-600 min-w-[156px] p-[16px] gap-4 text-white font-bold rounded-lg max-h-[400px]">
         <a href="/ose-database">ose-database</a>
