--- a/views/ose-information.ejs
+++ b/views/ose-information.ejs
@@ -1,9 +1,9 @@
 <div>
     <h1><%= `OSE-${ose.anonomoly_id_number}` %></h1>
-    <hr>
+    <hr class="border-t-4 border-red-700">
     <p><strong>Documentation Manager: </strong><%= `OSE-${ose.author}` %></p>
     <p><strong>Item #: </strong><%= `OSE-${ose.anonomoly_id_number}` %></p>
     <p><strong>Object Class: </strong><%= `OSE-${ose.object_class}` %></p>
-    <p><strong>Description: </strong><%= `OSE-${ose.special_containment_procedures}` %></p>
-    <p><strong>Special Containment Procedures: </strong><%= `OSE-${ose.description}` %></p>
+    <p><strong>Description: </strong><%= `${ose.special_containment_procedures}` %></p>
+    <p><strong>Special Containment Procedures: </strong><%= `${ose.description}` %></p>
 </div>
