--- a/views/ose-database.ejs
+++ b/views/ose-database.ejs
@@ -1,14 +1,21 @@
+<div class="flex flex-col">
     <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-col justify-center">
         <h1>The OSE Database</h1>
-        <p>Number of OSE's documented: <%= ose_count %></p>
+        <p>Number of OSE's documented: <%= ose_count %>
+        </p>
     </div>
+    <hr>
     <ul>
         <% all_ose.forEach(function(ose) { %>
             <li>
-                <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-col justify-center">
-                    <a href="<%= `/ose-database/${ose._id}` %>"><%= "OSE-" + ose.anonomoly_id_number %></a>
-                    <p><%= "Author: Dr. " + ose.author.first_name + " " + ose.author.family_name %></p>
+                <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-row justify-center hover:text-blue-400">
+                    <a href="<%= `/ose-database/${ose._id}` %>">
+                        <%= `OSE-${((ose.anonomoly_id_number > 99) ? ose.anonomoly_id_number : ((ose.anonomoly_id_number
+                            > 9) ? `0${ose.anonomoly_id_number}` : `00${ose.anonomoly_id_number}` ))} - Author:
+                            Dr.${ose.author.first_name} ${ose.author.family_name}` %>
+                    </a>
                 </div>
             </li>
-        <% }); %>
+            <% }); %>
     </ul>
+</div>
