--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,9 @@
 <body>
   <div class="bg-black">
     <div class="mx-[25vw] flex items-center gap-4">
-      <img src="/images/OSELogo.png" class="shrink">
+      <a href="/">
+        <img src="/images/OSELogo.png" class="shrink">
+      </a>
       <div>
         <h1 class="text-white">Welcome to the OSE Corporation!</h1>
         <p class="text-yellow-100"> Our modo here is Observe, Study, and Enhance!</p>
@@ -22,8 +24,9 @@
   <div class="min-h-[75vh] mx-[16vw] my-[5vh] flex flex-row justify-center">
     <div class="flex gap-8">
       <div class="flex flex-col bg-gray-600 min-w-[156px] p-[16px] gap-4 text-white font-bold rounded-lg max-h-[400px]">
-        <a href="/ose-database">ose-database</a>
-        <a href="/employee-database">employees</a>
+        <a href="/ose-database">Ose-Database</a>
+        <a href="/employee-database">Employees</a>
+        <a href="/">Home</a>
       </div>
       <%- include(inputPage) %>
     </div>
