--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,9 @@
   <div class="min-h-[75vh] mx-[16vw] my-[5vh] flex flex-row justify-center">
     <div class="flex gap-8">
       <div class="flex flex-col bg-gray-600 min-w-[156px] p-[16px] gap-4 text-white font-bold rounded-lg max-h-[400px]">
-        <a href="/ose-database">Ose-Database</a>
-        <a href="/employee-database">Employees</a>
-        <a href="/">Home</a>
+        <a class="hover:text-blue-400" href="/ose-database">Ose-Database</a>
+        <a class="hover:text-blue-400" href="/employee-database">Employees</a>
+        <a class="hover:text-blue-400" href="/">Home</a>
       </div>
       <%- include(inputPage) %>
     </div>
