Fix employee personal file html

--- a/views/employee-personal-file.ejs
+++ b/views/employee-personal-file.ejs
@@ -7,7 +7,7 @@
         <%= `Dr. ${employee.first_name} ${employee.family_name}` %>
     </p>
     <p><strong>Employee ID#: </strong>
-        <%= `OSE-${employee._id}` %>
+        <%= `${employee._id}` %>
     </p>
     <p><strong>Clearance Level: </strong>
         <%= `${employee.clearance_level}` %>
