Fix logic errors

--- a/views/employee-database.ejs
+++ b/views/employee-database.ejs
@@ -10,7 +10,7 @@
             <li>
                 <div class="min-h-[64px] bg-slate-700 p-4 text-white flex flex-row justify-center hover:text-blue-400">
                     <a href="<%= `/employee-database/${employee._id}` %>">
-                        <%= `Dr. ${ose.author.first_name} ${ose.author.family_name}` %>
+                        <%= `Dr. ${employee.first_name} ${employee.family_name}` %>
                     </a>
                 </div>
             </li>
