--- a/views/ose_form.ejs
+++ b/views/ose_form.ejs
@@ -9,7 +9,8 @@
 <body>
     <form method="POST" action="">
         <label for="anonomoly_id_number">OSE Identification Number:</label>
-        <input 
+        <input
+            value=<%= ose.anonomoly_id_number %> 
             id="anonomoly_id_number"
             type="number"
             name="anonomoly_id_number_field"
@@ -23,7 +24,12 @@
             required="true"
         >
             <% authors.forEach((author) => { %>
-                <option value="<%= author._id %>">Dr. <%= author.first_name + " " + author.family_name %></option>
+                <option 
+                    value="<%= author._id %>"
+                    <% if (author._id === ose.author) { %>
+                        selected
+                    <% } %>
+                    >Dr. <%= author.first_name + " " + author.family_name %></option>
             <% }); %>
         </select>
         <label for="object_class">Object Class:</label>
@@ -34,7 +40,12 @@
             required="true"
         >
             <% ["ZAYIN", "TETH", "HE", "WAW", "ALEPH"].forEach((object_class) => { %>
-                <option value="<%= object_class %>"><%= object_class %></option>
+                <option 
+                    value="<%= object_class %>"
+                    <% if (object_class === ose.object_class) { %>
+                     selected
+                    <% } %>
+                    ><%= object_class %></option>
             <% }); %>
         </select>
         <label for="special_containment_procedures">Special Containment Procedures:</label>
@@ -42,12 +53,14 @@
             id="special_containment_procedures"
             type="text"
             name="special_containment_procedures_field"
+            value="<%= ose.special_containment_procedures %>"
         />
         <label for="description">Description:</label>
         <input
             id="description"
             type="text"
             name="description_field"
+            value="<%= ose.description %>"
         />
         <input type="submit" value="Submit OSE Entry" />
     </form>
