--- a/views/ose_form.ejs
+++ b/views/ose_form.ejs
@@ -7,6 +7,17 @@
     <title>OSE Enter Form</title>
 </head>
 <body>
+    <% if (is_editing) { %>
+        <form method="POST" action="/ose-database/ose-delete">
+            <input 
+                type="hidden"
+                name="_id"
+                value="<%= ose._id %>" 
+                required="true"
+            />
+            <button type="submit">Delete</button>
+        </form>     
+    <% } %>
     <form method="POST" action="/ose-database/ose-form">
         <label for="anonomoly_id_number">OSE Identification Number:</label>
         <input
