--- a/views/employee_form.ejs
+++ b/views/employee_form.ejs
@@ -14,24 +14,28 @@
             type="text"
             required="true"
             name="first_name_field"
+            value="<%= employee.first_name %>"
         />
         <label for="family_name">Family Name</label>
         <input 
             id="family_name"
             type="text"
             name="family_name_field"
+            value="<%= employee.family_name %>"
         />
         <label for="date_of_birth">Date of Birth:</label>
         <input 
             id="date_of_birth"
             type="date"
             name="date_of_birth_field"
+            value="<%= employee.date_of_birth %>"
         />
         <label for="date_of_death">Date of Death:</label>
         <input 
             id="date_of_death"
             type="date"
             name="date_of_death_field"
+            value="<%= employee.date_of_death %>"
         />
         <label for="clearance_level">Clearance Level:</label>
         <select 
@@ -41,9 +45,25 @@
             required="true"
         >
         <% ["I", "II", "III", "IV", "V"].forEach((clearance_level) => { %>
-            <option value="<%= clearance_level %>"><%= clearance_level %></option>
+            <option
+                <% if (employee.clearance_level === clearance_level) { %>
+                 selected
+                <% } %> 
+                value="<%= clearance_level %>"><%= clearance_level %></option>
         <% }); %>
         </select>
+        <input 
+            type="hidden"
+            name="is_editing"
+            value="<%= is_editing %>" 
+            required="true"
+        />
+        <input 
+            type="hidden"
+            name="_id"
+            value="<%= employee._id %>" 
+            required="true"
+        />
         <input type="submit" value="Submit Employee Form" />
     </form>
 </body>
