--- a/views/employee_form.ejs
+++ b/views/employee_form.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post" action="">
+    <form method="post" action="/employee-database/employee-form">
         <label for="first_name">First Name</label>
         <input 
             id="first_name"
