--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/images/OSELogo.png" />
+  <script src="https://kit.fontawesome.com/98a5c9e757.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,6 +30,16 @@
         <a class="hover:text-blue-400" href="/">Home</a>
       </div>
       <%- include(inputPage) %>
+    </div>
+  </div>
+  <div>
+    <div class="bg-gray-700"></div>
+    <div class="flex flex-col gap-3 justify-center items-center bg-black h-32">
+      <p class="text-white">A small personal project for a friend and my self</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/MasonPartridge"><i class="fa-brands fa-github text-white fa-2xl"></i></a>
+        <a href="masonepartridge@gmail.com"><i class="fa-solid fa-envelope text-white fa-2xl"></i></a>
+      </div>
     </div>
   </div>
 </body>
