Feature: Add mailto: in footer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
       <p class="text-white">A small personal project for a friend and my self</p>
       <div class="flex gap-4">
         <a href="https://github.com/MasonPartridge"><i class="fa-brands fa-github text-white fa-2xl"></i></a>
-        <a href="masonepartridge@gmail.com"><i class="fa-solid fa-envelope text-white fa-2xl"></i></a>
+        <a href="mailto:masonepartridge@gmail.com"><i class="fa-solid fa-envelope text-white fa-2xl"></i></a>
       </div>
     </div>
   </div>
