--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -573,6 +573,10 @@ video {
   height: 700px;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .max-h-\[400px\] {
   max-height: 400px;
 }
@@ -587,14 +591,6 @@ video {
 
 .min-h-\[75vh\] {
   min-height: 75vh;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-12 {
-  width: 3rem;
 }
 
 .w-10 {
@@ -645,6 +641,10 @@ video {
   gap: 2rem;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -669,11 +669,6 @@ video {
 .border-red-700 {
   --tw-border-opacity: 1;
   border-color: rgb(185 28 28 / var(--tw-border-opacity));
-}
-
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -754,6 +749,13 @@ video {
 .triangle {
   -webkit-clip-path: polygon(0 0, 100% 0, 0 100%);
   clip-path: polygon(0 0, 100% 0, 0 100%);
+}
+
+.form-field {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(55, 65, 81);
+  background-color: rgb(239, 235, 223);
 }
 
 .hover\:min-h-\[74px\]:hover {
