--- a/src/input.css
+++ b/src/input.css
@@ -6,3 +6,10 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 0 100%);
     clip-path: polygon(0 0, 100% 0, 0 100%);
 }
+
+.form-field {
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(55, 65, 81);
+    background-color: rgb(239, 235, 223);
+}
