--- a/views/ose_form.ejs
+++ b/views/ose_form.ejs
@@ -19,7 +19,7 @@
                 type="number"
                 name="anonomoly_id_number_field"
                 required="true"
-                class="border-solid border-2 border-gray-700 bg-gray-200 w-10"
+                class="form-field w-10"
             />
         </div>
         <hr class="border-t-4 border-red-700">
@@ -29,7 +29,7 @@
                 id="author"
                 for="author"
                 name="author_field"
-                class="border-solid border-2 border-gray-700 bg-gray-200"
+                class="form-field"
                 required="true"
             >
                 <% authors.forEach((author) => { %>
@@ -48,7 +48,7 @@
                 id="object_class"
                 for="object_class"
                 name="object_class_field"
-                class="border-solid border-2 border-gray-700 bg-gray-200"
+                class="form-field"
                 required="true"
             >
                 <% ["ZAYIN", "TETH", "HE", "WAW", "ALEPH"].forEach((object_class) => { %>
@@ -61,26 +61,22 @@
                 <% }); %>
             </select>
         </div>
-        <div>
             <label for="special_containment_procedures">Special Containment Procedures:</label>
-            <input
+            <textarea
                 id="special_containment_procedures"
                 type="text"
                 name="special_containment_procedures_field"
-                class="border-solid border-2 border-gray-700 bg-gray-200"
-                value="<%= ose.special_containment_procedures %>"
-            />
-        </div>
-        <div>
+                class="form-field overflow-wrap"
+                rows="5"
+            ><%= ose.special_containment_procedures %></textarea>
             <label for="description">Description:</label>
-            <input
+            <textarea
                 id="description"
                 type="text"
                 name="description_field"
-                class="border-solid border-2 border-gray-700 bg-gray-200"
-                value="<%= ose.description %>"
-            />
-        </div>
+                class="form-field"
+                rows="5"
+            ><%= ose.description %></textarea>
         <input 
             type="hidden"
             name="is_editing"
